# k2-crm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  seed.py
app/: __init__.py  config.py  errors.py  extensions.py  models.py  routes.py  schemas.py  services.py
docs/: check-screenshots.mjs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.test.ts  client.ts  types.ts
frontend/src/components/: Badge.test.tsx  Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Field.tsx  Icon.tsx  Modal.tsx  Spinner.tsx  StatCard.tsx  Toast.tsx
frontend/src/components/charts/: AreaChart.tsx  BarList.tsx  DonutChart.tsx
frontend/src/utils/: format.ts  money.test.ts  money.ts
frontend/src/views/: ActivityView.tsx  ClientsView.tsx  DashboardView.tsx  OrdersView.tsx  ProductsView.tsx  ReportsView.tsx  SettingsView.tsx
tests/: conftest.py  test_analytics.py  test_clients.py  test_orders.py  test_products.py
